# haskell-exercises

./: .gitignore  Calculator.md  README.md  cabal.project
Calculator/: Calculator.cabal  Calculator.hs
